added facebook appId

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ title:       "Learn STEMTera&trade; Breadboard."
 description: "Learn Basic Electronics and Arduino with STEMTera&trade; Breadboard."
 google_analytics_key: 
 twitter_username: stemtera
+facebook_app_id: 1213473132073226
 domain: stemtera.com
 url: http://learn.stemtera.com
 image: http://learn.stemtera.com/img/banner.jpg
