improved STMB keyword replacement

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,10 @@ lsi: false
 markdown: kramdown
 
 ### content configuration ###
-title:       "Learn STEMTera&trade; Breadboard."
-description: "Learn Basic Electronics and Arduino with STEMTera&trade; Breadboard."
+stmb:           "STEMTera&trade; Breadboard"
+stmb_key:       "(STMB)"
+title:          "Learn (STMB)"
+description:    "Learn Basic Electronics and Arduino with (STMB)"
 google_analytics_key: UA-84604008-5
 twitter_username: stemtera
 facebook_app_id: 1213473132073226
